# python-cookiecutter

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  TESTING.md  pyproject.toml  tox.ini
.github/: POSTMORTEM.md
.github/ISSUE_TEMPLATE/: issue-simple.md
.github/PULL_REQUEST_TEMPLATE/: pr-simple.md
.github/workflows/: lint.yml  security-bandit.yml  test.yml
.gitlab/issue_templates/: issue-simple.md
tests/: Dockerfile.pre-commit
